# BuT

./: .generate_examples.sh  .generate_synthesis.sh  .gitignore  Cargo.toml  PROMPT.md  README.adoc  TODO.md  codecov.yml  example.ltl  extract.txt
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: behavior.rs  c.rs  condition.rs  lc3.rs  lib.rs  ltl.rs  st.rs  thumb.rs  verilog.rs
docs/: BuT_Language_Specification.md  style.plantuml
docs/generator/: engine.but  position.but  position.but_
docs/generator/c/: CMakeLists.txt  engine.c  engine.h  engine_main.c
docs/generator/engine/c/: engine.c  engine.h  engine_main.c
docs/generator/position/c/: position.c  position.h  position_main.c
generator/: Cargo.toml
generator/src/: lib.rs  sample.rs
grammar/: BuT.bnf
grammar/BuT/: Cargo.toml  build.rs
grammar/BuT/src/: annotations.rs  ast.rs  but.lalrpop  but.rs  diagnostics.rs  doccomment.rs  lexer.rs  lib.rs  tests.rs  typing.rs  variables.rs
grammar/BuT/src/helpers/: fmt.rs  loc.rs  mod.rs  ord.rs
grammar/BuT/test_grammars/: engine.but  formula.but  template.but  transport.but  turing.but  typing.but
grammar/LTL/: Cargo.toml  build.rs  tests.py
grammar/LTL/src/: expression.rs  grammar.lalrpop  lib.rs
grammar/LTL/src/ast/: expression.rs  mod.rs
grammar/LTL/src/runtime/: context.rs  error.rs  executor.rs
grammar/LTL/test_grammars/: basic.ltl
grammar/but/: Cargo.toml  build.rs
grammar/but/grammar/: BuT.bnf
grammar/but/src/: annotations.rs  ast.rs  but.condition.lalpop.txt  but.lalrpop  but.lalrpop.txt  diagnostics.rs  functions.rs  lexer.rs  lib.rs  properties.rs  tests.rs  typing.rs  variables.rs
grammar/but/src/helpers/: fmt.rs  ident.rs  loc.rs  mod.rs  ord.rs
grammar/ltl/: Cargo.toml  build.rs
grammar/ltl/src/: ast.rs  grammar.lalrpop  lib.rs  ltl.lalrpop  ltl.pest
grammar/ltl/src/ast/: expression.rs  mod.rs
grammar/tests_data/BuT/: delay.but  engine.but  pneumo.but  position.but  turing_algorithm0.but
grammar/tests_data/BuT/examples/: behavior_example.but  bit_access.but  delay.but  engine.but  include_example.but  include_shared_types.but  indent_style.but  pneumo.but  position.but  std_types_example.but  transport.but  turing.but  turing_algorithm0.but  type_alias.but
grammar/tests_data/BuT/examples/multi_include/libs/platform/: types.but
grammar/tests_data/BuT/examples/multi_include/libs/protocol/: frames.but
grammar/tests_data/BuT/examples/multi_include/src/: main.but
grammar/tests_data/BuT/examples/synthesis/: synthesis_model.but
grammar/tests_data/BuT/semantic/: condition._but  condition.but
grammar/tests_data/BuT/syntax/: annotations.but  complex.but  conditions.but  enums.but  errors.but  formulas.but  functions.but  imports.but  models.but  properties.but  template._but  template.but  templates.but  typing.but  variables.but
include/: std.but
middleware/: Cargo.toml
middleware/src/: bitaccess.rs  context.rs  include.rs  lib.rs  tree.rs  unit.rs  unit2.rs
middleware/src/model/: expression.rs  mod.rs
middleware/src/types/: bit.rs  mod.rs
middleware/tests_data/include/basic/: main.but  types.but
middleware/tests_data/include/circular/: a.but  b.but
middleware/tests_data/include/dedup/: a.but  common.but  main.but
middleware/tests_data/include/errors/: broken.but  main.but
middleware/tests_data/include/nested/: level1.but  level2.but  main.but
middleware/tests_data/include/search_paths/app/: main.but
middleware/tests_data/include/search_paths/libs/hardware/: regs.but
middleware/tests_data/include/search_paths/libs/shared/: defs.but
middleware/tests_data/include/search_paths/override/local/: platform.but
middleware/tests_data/include/search_paths/override/project/: main.but
middleware/tests_data/semantic/failed/: bit_access_out_of_bounds.but  duplicate_enums.but  duplicate_functions.but  duplicate_properties.but  duplicate_structs.but  duplicate_types.but  duplicate_variables.but
middleware/tests_data/semantic/success/: big.but  bit_access_valid.but  structs.but  types.but  unnamed_enums.but
scripts/: gen_all.bat  gen_all.ps1  gen_all.sh
simulator/: Cargo.toml
simulator/src/: context.rs  executor.rs  expr.rs  lib.rs  ltl.rs  machine.rs  value.rs
simulators/: Cargo.toml
simulators/src/: builder.rs  context.rs  executor.rs  expr.rs  lib.rs  ltl.rs  machine.rs  value.rs
visual/: Cargo.toml
visual/src/: dot.rs  lib.rs  render.rs
