[package]
name = "but"
version = "0.1.0"
authors = ["Pastor <viruszold@gmail.com>"]
edition = "2021"
license = "BSD"

[[bin]]
name = "but"
path = "src/main.rs"

[dependencies]
but-grammar = { path = "../grammar/but" }
but-middleware = { path = "../middleware" }
but-simulator = { path = "../simulator" }
but-visual = { path = "../visual" }
but-codegen = { path = "../codegen" }
clap = { version = "4.4", features = ["derive"] }
