[package]
name = "but-middleware"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "BuT middleware"
homepage = "https://but.ru"
repository = "https://github.com/Pastor/BuT"
readme = "../README.adoc"
keywords = ["BuT", "middleware"]
license = "BSD"
edition = "2024"
include = ["Cargo.toml", "src/**/*"]

[dependencies]
but-grammar = { path = "../grammar/but" }
bit-vec = "0.9.1"
bit-set = "0.9.1"

[dev-dependencies]
walkdir = "^2.5.0"
regex = "^1"
