[package]
name = "LTL"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "LTL"
homepage = "https://but.ru"
repository = "https://github.com/Pastor/BuT"
readme = "../../README.md"
keywords = ["LTL", "BuT", "framework", "code", "generation"]
license = "BSD"
edition = "2021"
rust-version = "1.56"
exclude = ["src/grammar.lalrpop"]
include = ["Cargo.toml", "src/**/*", "src/ast.rs", "README.md", "LICENSE*"]

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = "0.20.0"

[dev-dependencies]
rstest = "0.17.0"