[package]
name = "LTL"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "LTL"
homepage = "https://but.ru"
repository = "https://github.com/Pastor/BuT"
readme = "../../README.md"
keywords = ["LTL", "BuT", "framework", "code", "generation"]
license = "BSD"
edition = "2021"
rust-version = "1.71.0"
exclude = ["src/grammar.lalrpop"]
include = ["Cargo.toml", "src/**/*", "src/ast.rs", "README.md", "LICENSE*"]

[[bin]]
name = "LTL-Tooling"
test = false
bench = false
path = "bin/tooling/main.rs"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.20.0"
thiserror = "^1.0"
clap = { version = "4.4.8", features = ["derive"] }
codespan = "0.11.1"

[dev-dependencies]
rstest = "^0.18.2"
