[package]
name = "but"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "BuT"
homepage = "https://but.ru"
repository = "https://github.com/Pastor/BuT"
readme = "../../README.adoc"
keywords = ["BuT", "framework", "code", "generation"]
license = "BSD"
edition = "2021"
rust-version = "1.71.0"
exclude = ["src/grammar.lalrpop"]
include = ["Cargo.toml", "src/**/*", "src/ast.rs", "README.adoc", "LICENSE*"]

[[bin]]
name = "but-tooling"
test = false
bench = false
path = "bin/tooling/main.rs"

[build-dependencies]
lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", package = "lalrpop", version = "^0.20.1", features = ["lexer"] }

[dependencies]
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop.git", package = "lalrpop-util", version = "^0.20.1"}
thiserror = "^1.0"
clap = { version = "4.4.10", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
unicode-xid = "0.2"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
codespan-reporting = "0.11.1"
anyhow = "1.0.75"

[dev-dependencies]
rstest = "^0.18.2"
walkdir = "2.4.0"
regex = "1"
pretty_assertions = "1.4"

[features]
default = []
ast-serde = ["serde"]
