[package]
name = "but_ltl"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "LTL"
homepage = "https://rocket.rs"
repository = "https://github.com/Pastor/BuT"
readme = "../../README.md"
keywords = ["ltl", "BuT", "framework", "code", "generation"]
license = "BSD"
edition = "2021"
rust-version = "1.56"
#exclude = ["src/ltl.pest"]
include = ["Cargo.toml", "src/**/*", "src/ltl.rs", "README.md", "LICENSE*"]

[dependencies]
pest = "^2.2.1"
pest_derive = "^2.2.1"