[package]
name = "ltl-grammar"
version = "0.0.1"
authors = ["Pastor <viruszold@gmail.com>"]
description = "LTL"
homepage = "https://but.ru"
repository = "https://github.com/Pastor/BuT"
readme = "../../README.md"
keywords = ["LTL", "BuT", "framework", "code", "generation"]
license = "BSD"
edition = "2024"
exclude = ["src/ltl.lalrpop"]
include = ["Cargo.toml", "src/**/*", "src/ast.rs", "README.md", "LICENSE*"]

[[bin]]
name = "ltl-tooling"
test = false
bench = false
path = "bin/tooling/main.rs"

[build-dependencies]
lalrpop = { version = "0.23.0", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.23.0"
thiserror = "2.0.18"
clap = { version = "4.4.10", features = ["derive"] }
codespan = "0.13.1"

[dev-dependencies]
rstest = "0.26.1"
